# forgenpu-kernels

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
benchmarks/: bench_matmul.py
cpp/include/forgenpu_kernels/: version.h
cpp/src/: version.cpp
docs/: attention-memory-notes.md  benchmark-methodology.md  decoder-block.md  design.md  matmul.md  profiler-notes.md  reproducibility.md  roofline.md  tensor-core-notes.md
forgenpu_kernels/: __init__.py  benchmarks.py  bindings.py  matmul_benchmark.py  ops.py  reporting.py
forgenpu_kernels/cli/: __init__.py  bench_matmul.py  profile_matmul_ncu_target.py  profile_matmul_torch.py
forgenpu_kernels/cuda/matmul/: matmul_naive.cu  matmul_tiled.cu
forgenpu_kernels/triton/: __init__.py
kernels/cuda/matmul/: matmul_naive.cu  matmul_tiled.cu  matmul_wmma.cu
kernels/triton/: README.md  attention.py  kv_cache.py  matmul.py  norm.py  rope.py  softmax.py
results/profiles/: m2-runpod-h100.md  m3-h100-triton.md
scripts/: collect_machine_info.py  env_check.py  install_nsight_systems_ubuntu.sh  profile_attention.sh  profile_decoder_block.sh  profile_matmul.sh  profile_matmul_ncu.ps1  profile_matmul_torch.py
tests/: test_bench_matmul_cli.py  test_benchmarks.py  test_bindings.py  test_matmul.py  test_matmul_benchmark.py
