[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgenpu-kernels"
version = "0.0.0"
description = "CUDA/C++ and Triton transformer inference kernel systems project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "John Patrick Laurel" }]
dependencies = [
  "numpy>=1.26",
  "torch>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
triton = [
  "triton>=2.3; platform_system == 'Linux'",
]

[tool.setuptools.packages.find]
include = ["forgenpu_kernels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
