[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgenpu-kernels"
version = "0.0.0"
description = "CUDA/C++ and Triton transformer inference kernel systems project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "John Patrick Laurel" }]
dependencies = [
  "ninja>=1.13.0",
  "numpy>=1.26",
  "rich>=13.0",
  "torch==2.7.1; sys_platform == 'linux'",
  "torch>=2.12.0; sys_platform == 'darwin'",
  "torch>=2.12.0; sys_platform == 'win32'",
  "typer>=0.12",
]

[project.scripts]
forgenpu-bench-matmul = "forgenpu_kernels.cli.bench_matmul:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
triton = [
  "triton>=2.3; platform_system == 'Linux'",
]

[tool.setuptools.packages.find]
include = ["forgenpu_kernels*"]

[tool.setuptools.package-data]
forgenpu_kernels = ["cuda/matmul/*.cu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
